# OSDev

./: .gitignore  CMakeLists.txt  README.md  ask.txt  build.sh  kernel.map  linker.ld  mkiso.sh
include/: getreg.h  tty.h
iso/: bin
iso/boot/grub/: grub.cfg
src/: CMakeLists.txt
src/asm/: boot.asm  linker.ld
src/c/: kernel.c  stdio.c  stdlib.c  string.c  tty.c  tty.h
sysroot/usr/include/: stdio.h  stdlib.h  string.h
